Fix javadoc bug with triple * instead of ** (#201)